First pass at html for landing page.
Added the first attempt of html before any style added. Attempted to create all divs necessary in order to use flexbox in css.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="header">
+       <a>Logo Placeholder</a>
+        <ul>
+        <li>Header Link One</li>
+        <li>Header Link Two</li>
+        <li>Header Link Three</li>
+       </ul>
+    </div>
+    <div class="title">
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext here that goes under the main title. It has some smaller font and the color is lower contrast.</p>
+        <button>Sign Up</button>
+        <p>image goes here</p>
+    </div>
+    <div class="services">
+        <h1>Some Random Information</h1>
+        <div class="services-images">   
+            <p>Image 1 goes here</p>
+            <p>Image 2 goes here</p>
+            <p>Image 3 goes here</p>
+            <p>Image 4 goes here</p>
+        </div> 
+        <div class="images-description">
+            <p>This is some subtext under image 1</p>
+            <p>This is some subtext under image 2</p>
+            <p>This is some subtext under image 3</p>
+            <p>This is some subtext under image 4</p>
+        </div>
+    </div>
+    <div class="inspiration">
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <ul>
+            <li>Thor, God of Thunder</li>
+        </ul>
+    </div>
+    <div class="action">
+        <h2>Call to action! It's time!</h2>
+        <p>Sign up for our product by clicking that buttom right over there!</p>
+        <button>Sign Up</button>
+    </div>
+    <div class="footer">
+        <p>Copyright <span>Copyright symbol</span>The Odin Project 2021</p> 
+    </div>
 </body>
 </html>
