--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <button>Sign Up</button>
     </div>
     <div class="footer">
-        <p>Copyright <span>Copyright symbol</span>The Odin Project 2021</p> 
+        <p>Copyright <span>Copyright symbol</span>The Odin Project 2021</p>
     </div>
+    <p>another paragraph</p>
 </body>
 </html>
