Upload custom font for site
Added two custom fonts to be used on the landing page. Also created general css for the body of the landing page.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="header">
-       <a>Logo Placeholder</a>
-        <ul>
+       <img href="./images/logo-white.svg">
+       <ul>
         <li>Header Link One</li>
         <li>Header Link Two</li>
         <li>Header Link Three</li>
