Style title section, add picture
Added style to the title section of the website and inserted the digital-marketing picture.

--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
 </head>
 <body>
     <div class="header">
-       <img href="./images/logo-white.svg">
-       <ul>
+       <img class="logo" src="./images/logo-white.svg" alt="Fields Logo">
+       <ul class="navbar">
         <li>Header Link One</li>
         <li>Header Link Two</li>
         <li>Header Link Three</li>
        </ul>
     </div>
     <div class="title">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext here that goes under the main title. It has some smaller font and the color is lower contrast.</p>
-        <button>Sign Up</button>
-        <p>image goes here</p>
+        <div class="title-l">
+            <h1>This website is awesome</h1>
+            <div class="title-p">    
+                <p>This website has some subtext here that goes under the main title. It has some smaller font and the color is lower contrast.</p>
+            </div>
+            <button>Sign Up</button>
+        </div>
+        <img class="digital-marketing" src="./images/digital-marketing.svg" alt="Digital Marketing Desk">
     </div>
     <div class="services">
         <h1>Some Random Information</h1>
@@ -45,7 +49,7 @@
     </div>
     <div class="action">
         <h2>Call to action! It's time!</h2>
-        <p>Sign up for our product by clicking that buttom right over there!</p>
+        <p>Sign up for our product by clicking that button right over there!</p>
         <button>Sign Up</button>
     </div>
     <div class="footer">
