Add css to services section
Added css to the services section. Took a few iteration of using flexbox to get the alignment the way I wanted it.

Also replaced images in the services section with svg files.

--- a/index.html
+++ b/index.html
@@ -26,19 +26,23 @@
         </div>
         <img class="digital-marketing" src="./images/digital-marketing.svg" alt="Digital Marketing Desk">
     </div>
-    <div class="services">
-        <h1>Some Random Information</h1>
-        <div class="services-images">   
-            <p>Image 1 goes here</p>
-            <p>Image 2 goes here</p>
-            <p>Image 3 goes here</p>
-            <p>Image 4 goes here</p>
-        </div> 
-        <div class="images-description">
-            <p>This is some subtext under image 1</p>
-            <p>This is some subtext under image 2</p>
-            <p>This is some subtext under image 3</p>
-            <p>This is some subtext under image 4</p>
+    <h1 class="services-header">Some Random Information</h1> 
+    <div class="services">    
+        <div class="services-one">   
+            <img class="office-shots" src="./images/random-pic-1.svg">
+            <p class="images-description">This is some subtext under image 1</p>
+        </div>
+            <div class="services-two">  
+            <img class="office-shots" src="./images/random-pic-2.svg">
+            <p class="images-description">This is some subtext under image 2</p>
+        </div>
+        <div class="services-three">
+            <img class="office-shots" src="./images/random-pic-3.svg">
+            <p class="images-description">This is some subtext under image 3</p>
+        </div>
+        <div class="services-four">
+            <img class="office-shots" src="./images/random-pic-4.svg">
+            <p class="images-description">This is some subtext under image 4</p>
         </div>
     </div>
     <div class="inspiration">
