--- a/index.html
+++ b/index.html
@@ -46,10 +46,8 @@
         </div>
     </div>
     <div class="inspiration">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <ul>
-            <li>Thor, God of Thunder</li>
-        </ul>
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="author">- Thor, God of Thunder</p>
     </div>
     <div class="action">
         <h2>Call to action! It's time!</h2>
