--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div class="header">
        <img class="logo" src="./images/logo-white.svg" alt="Fields Logo">
        <ul class="navbar">
-        <li>Header Link One</li>
-        <li>Header Link Two</li>
-        <li>Header Link Three</li>
+        <li><a href="#section-1">Awesome</a></li>
+        <li><a href="#section-2">Services</a></li>
+        <li><a href="#section-3">Inspiration</a></li>
        </ul>
     </div>
-    <div class="title">
+    <div id="section-1" class="title">
         <div class="title-l">
             <h1>This website is awesome</h1>
             <div class="title-p">    
@@ -26,7 +26,7 @@
         </div>
         <img class="digital-marketing" src="./images/digital-marketing.svg" alt="Digital Marketing Desk">
     </div>
-    <h1 class="services-header">Some Random Information</h1> 
+    <h1 id="section-2" class="services-header">Some Random Information</h1> 
     <div class="services">    
         <div class="services-one">   
             <img class="office-shots" src="./images/random-pic-1.svg">
@@ -45,17 +45,17 @@
             <p class="images-description">This is some subtext under image 4</p>
         </div>
     </div>
-    <div class="inspiration">
+    <div id="section-3" class="inspiration">
         <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p class="author">- Thor, God of Thunder</p>
+        <p class="quote author">- Thor, God of Thunder</p>
     </div>
     <div class="action">
-        <h2>Call to action! It's time!</h2>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button>Sign Up</button>
+        <h2 class="left">Call to action! It's time!</h2>
+        <p class="left">Sign up for our product by clicking that button right over there!</p>
+        <button class="right">Sign Up</button>
     </div>
     <div class="footer">
-        <p>Copyright <span>Copyright symbol</span>The Odin Project 2021</p>
+        <p>Copyright <span>&copy;</span> The Odin Project 2021</p>
     </div>
 </body>
 </html>
