Waited too long
Waited too long to commit and don't remember what was changed during this stage.

--- a/index.html
+++ b/index.html
@@ -47,13 +47,17 @@
     </div>
     <div id="section-3" class="inspiration">
         <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p class="quote author">- Thor, God of Thunder</p>
+        <p class="author">- Thor, God of Thunder</p>
     </div>
-    <div class="action">
-        <h2 class="left">Call to action! It's time!</h2>
-        <p class="left">Sign up for our product by clicking that button right over there!</p>
-        <button class="right">Sign Up</button>
-    </div>
+    <div class="cta">
+        <div class="action">
+            <h2 class="left">Call to action! It's time!</h2>
+            <p class="left">Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <div class="button">
+            <button>Sign Up</button>
+        </div>  
+        </div>
     <div class="footer">
         <p>Copyright <span>&copy;</span> The Odin Project 2021</p>
     </div>
